--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.7.7",
+    "compromise-dates": "^3.7.0",
+    "openai": "^4.73.0",
     "react-dom": "^18.3.1",
     "serve": "^14.2.4"
   },
