--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "axios": "^1.7.7",
     "compromise-dates": "^3.7.0",
     "openai": "^4.73.0",
-    "react-dom": "^18.3.1",
-    "serve": "^14.2.4"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
@@ -23,7 +23,7 @@
     "@babel/preset-react": "^7.25.9",
     "babel-loader": "^9.2.1",
     "html-webpack-plugin": "^5.6.3",
-    "style-loader": "^4.0.0",
+    "style-loader": "^3.3.1",
     "webpack": "^5.96.1",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.1.0"
