--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "task-genie",
   "version": "1.0.0",
   "main": "index.js",
+  "homepage": "https://task-genie-tau.vercel.app/",
   "scripts": {
     "build": "webpack --mode production",
     "start": "webpack serve --mode development"
@@ -13,6 +14,7 @@
   "dependencies": {
     "axios": "^1.7.7",
     "compromise-dates": "^3.7.0",
+    "cors": "^2.8.5",
     "openai": "^4.73.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
