--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "task-genie",
   "version": "1.0.0",
   "main": "index.js",
-  "homepage": "https://task-genie-tau.vercel.app/",
   "scripts": {
     "build": "webpack --mode production",
     "start": "webpack serve --mode development"
@@ -14,19 +13,16 @@
   "dependencies": {
     "axios": "^1.7.7",
     "compromise-dates": "^3.7.0",
-    "cors": "^2.8.5",
     "openai": "^4.73.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "serve": "^14.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
     "@babel/preset-env": "^7.26.0",
     "@babel/preset-react": "^7.25.9",
     "babel-loader": "^9.2.1",
-    "css-loader": "^6.11.0",
     "html-webpack-plugin": "^5.6.3",
-    "style-loader": "^3.3.4",
     "webpack": "^5.96.1",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.1.0"
